[package]
name = "mysql-proxy"
description = "Extensible MySQL Proxy"
version = "0.2.1"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://github.com/AgilData/mysql-proxy-rs"
documentation = "https://github.com/AgilData/mysql-proxy-rs"
repository = "https://github.com/AgilData/mysql-proxy-rs"
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
env_logger = "0.3"
byteorder = "0.5.3"
bytes = "0.5.4"
iota = "0.2"
